devcom104: updated cors